--- a/GeriatricHelper/Base.lproj/Main.storyboard
+++ b/GeriatricHelper/Base.lproj/Main.storyboard
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G24b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="40w-Gb-5Ay">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="40w-Gb-5Ay">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Avenir.ttc">
+            <string>Avenir-Book</string>
+            <string>Avenir-Light</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Initial Setup-->
         <scene sceneID="KOk-qI-P9g">
@@ -283,7 +290,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZHD-lj-BdL">
-                                            <rect key="frame" x="8" y="8" width="184" height="184"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -319,7 +326,7 @@
                     <tabBarItem key="tabBarItem" title="Favorite" id="Zui-Jt-tVO"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Mwn-vo-6df">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -403,7 +410,7 @@
                                 <rect key="frame" x="87.5" y="233.5" width="200" height="200"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="5tD-QL-96E"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="5tD-QL-96E"/>
                                     <constraint firstAttribute="width" secondItem="gYN-cU-myb" secondAttribute="height" multiplier="1:1" id="SS6-my-OUU"/>
                                     <constraint firstAttribute="height" constant="200" id="Wbg-QK-V8u"/>
                                 </constraints>
@@ -424,10 +431,19 @@ SESSÃO</string>
                                     <action selector="startPublicSessionButtonClicked:" destination="T6I-32-vHK" eventType="touchUpInside" id="LqE-rA-Uce"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XhS-Hy-y0V">
+                                <rect key="frame" x="144" y="509" width="87" height="30"/>
+                                <state key="normal" title="SABER MAIS"/>
+                                <connections>
+                                    <action selector="showHelpScreen:" destination="T6I-32-vHK" eventType="touchUpInside" id="ljy-Ag-yRx"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="XhS-Hy-y0V" firstAttribute="centerX" secondItem="1Lj-NS-pG7" secondAttribute="centerX" id="bFQ-B1-GxS"/>
                             <constraint firstItem="gYN-cU-myb" firstAttribute="centerX" secondItem="1Lj-NS-pG7" secondAttribute="centerX" id="k6d-91-uRo"/>
+                            <constraint firstItem="XhS-Hy-y0V" firstAttribute="top" secondItem="gYN-cU-myb" secondAttribute="bottom" constant="75.5" id="kR8-Mw-klt"/>
                             <constraint firstItem="gYN-cU-myb" firstAttribute="centerY" secondItem="1Lj-NS-pG7" secondAttribute="centerY" id="nT5-xD-JiT"/>
                         </constraints>
                     </view>
@@ -449,7 +465,7 @@ SESSÃO</string>
                     <tabBarItem key="tabBarItem" title="Item" id="sAj-ci-ryc"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rbo-fm-NyP">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -597,7 +613,7 @@ SESSÃO</string>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VMT-QD-yVO" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ca4-Wg-Je2">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -684,7 +700,7 @@ SESSÃO</string>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Consultar critérios de prescriçao para pacientes geriátricos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WEA-fU-Ihi">
-                                                    <rect key="frame" x="8" y="11" width="453" height="21"/>
+                                                    <rect key="frame" x="8" y="11" width="451.5" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
