--- a/GeriatricHelper/CGAPublic.storyboard
+++ b/GeriatricHelper/CGAPublic.storyboard
@@ -62,7 +62,13 @@
         <scene sceneID="Cef-Fl-CSR">
             <objects>
                 <pageViewController autoresizesArchivedViewToFullSize="NO" modalTransitionStyle="flipHorizontal" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" doubleSided="YES" id="oMo-MT-t55" customClass="CGAPublicMultipleCategories" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="D3x-VF-0ft"/>
+                    <navigationItem key="navigationItem" id="D3x-VF-0ft">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Y06-g6-XFK">
+                            <connections>
+                                <action selector="saveScaleButtonClicked:" destination="oMo-MT-t55" id="qpn-k4-HPL"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xh1-Xr-SNJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -81,7 +87,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ojW-Sr-fBM">
-                                <rect key="frame" x="92" y="28" width="192" height="23"/>
+                                <rect key="frame" x="92.5" y="28" width="190" height="23"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -91,7 +97,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Index" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VOn-Zv-cpv" userLabel="Category Index">
-                                <rect key="frame" x="166" y="59" width="42" height="21"/>
+                                <rect key="frame" x="166.5" y="59" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -214,17 +220,22 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="CGA Single Question Scale" id="D5y-DE-0dN">
                         <barButtonItem key="backBarButtonItem" title="GoBack" id="2uB-Rs-FpP"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="WAx-fU-HWu">
+                            <connections>
+                                <action selector="saveButtonPressed:" destination="9Yt-du-9hg" id="tnA-fV-Ebp"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HM6-RG-HvQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2073" y="-537"/>
+            <point key="canvasLocation" x="2122" y="-331"/>
         </scene>
         <!--Scale Questions-->
         <scene sceneID="zYk-li-XO9">
             <objects>
-                <tableViewController title="Scales Questions" id="Peu-5Z-UVe" userLabel="Scale Questions" customClass="CGAPublicScalesQuestions" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Scales Questions" id="Peu-5Z-UVe" userLabel="Scale Questions" customClass="ScaleQuestions" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" id="izG-H4-drX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -261,7 +272,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Scale's Questions" id="pfO-hN-GEp">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="wTp-GT-ccE"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="wTp-GT-ccE">
+                            <connections>
+                                <action selector="saveButtonPressed:" destination="Peu-5Z-UVe" id="Igq-zw-Fm1"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -275,7 +290,7 @@
         <!--Question Options-->
         <scene sceneID="lDv-mW-3dV">
             <objects>
-                <tableViewController title="Question Options" id="sZv-8a-aEg" customClass="CGAPublicQuestionOptionsViewController" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Question Options" id="sZv-8a-aEg" customClass="QuestionOptions" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" id="CJi-sa-ppa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -288,7 +303,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="klv-MJ-BOT">
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="klv-MJ-BOT">
                                             <rect key="frame" x="16" y="10" width="33.5" height="20.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -446,6 +461,11 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Yes No Questions" id="Pur-Y2-Kki">
                         <barButtonItem key="backBarButtonItem" title="GoBack" id="rXO-FO-FZb"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="P4p-bP-cKe">
+                            <connections>
+                                <action selector="saveButtonClicked:" destination="gtM-Wm-YaA" id="4cP-1Y-sJa"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
