--- a/GeriatricHelper/PopOvers.storyboard
+++ b/GeriatricHelper/PopOvers.storyboard
@@ -23,20 +23,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scale Description" textAlignment="justified" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j3O-Qd-J9E">
-                                <rect key="frame" x="24" y="59" width="327" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scale Name" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IRv-WV-tJf">
                                 <rect key="frame" x="24" y="28" width="327" height="23"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="7UJ-7b-gi3">
+                                <rect key="frame" x="24" y="59" width="327" height="150"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="ejN-xC-EfL"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cTk-cz-xXz">
-                                <rect key="frame" x="24" y="88" width="335" height="571"/>
+                                <rect key="frame" x="24" y="217" width="335" height="442"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ItemCell" id="Vjc-3L-ptM" customClass="ScoreCellEqual" customModule="GeriatricHelper" customModuleProvider="target">
@@ -47,13 +51,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xhr-35-kTI">
-                                                    <rect key="frame" x="8" y="0.0" width="234.5" height="44"/>
+                                                    <rect key="frame" x="8" y="0.0" width="235" height="44"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6TU-It-sAC">
-                                                    <rect key="frame" x="250.5" y="-1" width="100.5" height="45"/>
+                                                    <rect key="frame" x="251" y="-1" width="101" height="45"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -95,7 +99,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8mh-gV-X2Z" userLabel="ValueMale">
-                                                    <rect key="frame" x="99.5" y="-1" width="42" height="45"/>
+                                                    <rect key="frame" x="100" y="-1" width="42" height="45"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -128,21 +132,22 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="j3O-Qd-J9E" firstAttribute="top" secondItem="IRv-WV-tJf" secondAttribute="bottom" constant="8" id="330-Ui-TYM"/>
+                            <constraint firstItem="7UJ-7b-gi3" firstAttribute="centerX" secondItem="e7B-sX-Bwu" secondAttribute="centerX" id="0hD-YG-rEN"/>
                             <constraint firstItem="cTk-cz-xXz" firstAttribute="leading" secondItem="e7B-sX-Bwu" secondAttribute="leadingMargin" constant="8" id="Cn5-3r-l2V"/>
-                            <constraint firstItem="cTk-cz-xXz" firstAttribute="top" secondItem="j3O-Qd-J9E" secondAttribute="bottom" constant="8" symbolic="YES" id="Di4-iU-rB4"/>
                             <constraint firstAttribute="trailingMargin" secondItem="IRv-WV-tJf" secondAttribute="trailing" constant="8" id="KYM-B2-6hY"/>
                             <constraint firstItem="IRv-WV-tJf" firstAttribute="leading" secondItem="e7B-sX-Bwu" secondAttribute="leadingMargin" constant="8" id="LTf-Iw-1aO"/>
                             <constraint firstItem="IRv-WV-tJf" firstAttribute="top" secondItem="GvE-5O-bea" secondAttribute="bottom" constant="8" id="Myx-eL-n7T"/>
+                            <constraint firstAttribute="trailing" secondItem="7UJ-7b-gi3" secondAttribute="trailing" constant="24" id="Oc1-uf-3cU"/>
                             <constraint firstAttribute="trailingMargin" secondItem="cTk-cz-xXz" secondAttribute="trailing" id="PiB-46-1GS"/>
-                            <constraint firstItem="j3O-Qd-J9E" firstAttribute="leading" secondItem="e7B-sX-Bwu" secondAttribute="leadingMargin" constant="8" id="RvK-Tb-bpc"/>
                             <constraint firstItem="bh6-dY-cZ7" firstAttribute="top" secondItem="cTk-cz-xXz" secondAttribute="bottom" constant="8" id="U2Z-5f-uZx"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="j3O-Qd-J9E" secondAttribute="trailing" constant="8" id="pDQ-ht-uHT"/>
+                            <constraint firstItem="7UJ-7b-gi3" firstAttribute="top" secondItem="IRv-WV-tJf" secondAttribute="bottom" constant="8" id="d61-Ra-La2"/>
+                            <constraint firstItem="7UJ-7b-gi3" firstAttribute="leading" secondItem="e7B-sX-Bwu" secondAttribute="leading" constant="24" id="hrk-Sk-EXU"/>
+                            <constraint firstItem="cTk-cz-xXz" firstAttribute="top" secondItem="7UJ-7b-gi3" secondAttribute="bottom" constant="8" id="zZQ-sV-QNG"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="name" destination="IRv-WV-tJf" id="Aan-cm-Iib"/>
-                        <outlet property="scaleDescription" destination="j3O-Qd-J9E" id="aAK-im-A0g"/>
+                        <outlet property="scaleDescription" destination="7UJ-7b-gi3" id="I3b-an-XlA"/>
                         <outlet property="scoringTable" destination="cTk-cz-xXz" id="d9f-zm-Xlw"/>
                     </connections>
                 </viewController>
